# rabbit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  adc.cxx  adc.hxx  ads1115_defs.h  ambience.cxx  ambience.hxx  arms.cxx  arms.hxx  camera.cxx  camera.hxx  compass.cxx  compass.hxx  keycontrol.cxx  logging.hxx  medianfilter.cxx  medianfilter.hxx  pca9685_regs.h  power.cxx  power.hxx  qmc5883l_defs.h  rabbit.c  rabbit.cxx  rabbit.hxx  servos.cxx  servos.hxx  video.cxx  video.hxx  websock.c  websock.h  websock.hxx  wheels.cxx  wheels.hxx  wifi.cxx
controller/: CMakeLists.txt  adc.cxx  adc.hxx  ambience.cxx  ambience.hxx  arms.cxx  arms.hxx  camera.cxx  camera.hxx  compass.cxx  compass.hxx  crond.cxx  crond.hxx  head.cxx  head.hxx  keycontrol.cxx  lidar.cxx  lidar.hxx  logging.cxx  max7219_defs.h  medianfilter.cxx  medianfilter.hxx  mosquitto.cxx  mosquitto.hxx  mouth.cxx  mouth.hxx  osdcam.cxx  osdcam.hxx  pca9685_regs.h  power.cxx  power.hxx  proximity.cxx  proximity.hxx  rabbit.cxx  rabbit.hxx  servos.cxx  servos.hxx  speech.cxx  speech.hxx  stereovision.cxx  (+8 more)
html/: index.html  rabbit.js
mcu/: CMakeLists.txt  ir.c  led.c  main.c  onboard_temp.c  rabbit_mcu.h  rs232.c  ultrasound.c  usbdev.c
ros/: CMakeLists.txt  package.xml
ros/rabbit/: CMakeLists.txt  package.xml
ros/rabbit/src/: rabbit-ros.cxx
ros/src/: rabbit-ros.cxx
voicerec/: CMakeLists.txt  filter.c  storage.c  voicerec.c  voicerec.h  whisper-voice.py
voicerec2/: CMakeLists.txt  voicerec2.cxx
