<?xml version="1.0"?>
<package format="2">
  <name>rabbit-ros</name>
  <version>0.0.0</version>
  <description>Rabbit'bot ROS package</description>

  <maintainer email="samurai@selfso.com">Charles Chiou</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/samurai0000000/rabbit/wiki/The-Rabbit-Robot-Project</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
